Se modifica el fichero miblog.css

--- a/miblog.css
+++ b/miblog.css
@@ -20,6 +20,7 @@ body {
 
 /* Cuando se utiiza el caracter # es un id */
 /* Cuando se utiiza el caracter . es una class */
+/* pongo algo para modificar el fichero */
 
 #agrupar {
         width: 960px;
