--- a/miblog.css
+++ b/miblog.css
@@ -3,11 +3,30 @@
         padding: 0px;
 }
 
+a { text-decoration: none; }
+
+a:link { color: black; }
+
+/* visited link */
+a:visited {  color: green;}
+
+/* mouse over link */
+a:hover {  color: blue;}
+
+/* selected link */
+a:active {  color: blue;}
+
+
+blockquote a:link { color: blue; }
+
+blockquote a:hover { color: grey; }
+
 h1 {
-        font: bold 20px verdana, sans-serif;
+        font: bold 20px 'Montserrat', sans-serif;
 }
+
 h2 {
-        font: bold 14px verdana, sans-serif;
+        font: bold 14px 'Montserrat', sans-serif;
 }
 
 header, section, footer, aside, nav, article, figure, figcaption, hgroup {
@@ -78,6 +97,10 @@ article footer {
         text-align: right;
 }
 
+article h1 {
+        font: bold 18px 'Montserrat', sans-serif;
+}
+
 time {
         color: #999999;
 }
@@ -86,6 +109,11 @@ figcaption {
         font: italic 14px verdana, sans-serif;
 }
 
+aside h1 {
+  /*font: bold 16px Theano Didot, sans-serif;*/
+  font: bold 16px 'Roboto', sans-serif;
+  margin-bottom: 4px;
+}
 
 div {
         width: 100px;
@@ -95,4 +123,27 @@ div {
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'KeepTheCalm';
+  src: url('KeepCalm-Medium.ttf');
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu7GxKOzY.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
